Added task list to html.

--- a/apps/front/src/app/modules/task/task.component.html
+++ b/apps/front/src/app/modules/task/task.component.html
@@ -1,1 +1,3 @@
-<p>task works!</p>
+<section class="task-list">
+  <mat-card *ngFor='let task of tasks'>{{task?.description}}</mat-card>
+</section>
