--- a/apps/front/src/app/modules/task/task.component.html
+++ b/apps/front/src/app/modules/task/task.component.html
@@ -1,6 +1,6 @@
 <section class="task-list">
   <mat-card *ngFor='let task of tasks'>
     <div>{{task?.description}}</div>
-    <mat-chip color="accent" selected>Accent fish</mat-chip>
+    <mat-chip color="accent" selected>{{task?.status}}</mat-chip>
   </mat-card>
 </section>
